--- a/home/templates/base/footer.html
+++ b/home/templates/base/footer.html
@@ -7,13 +7,8 @@
         <div class="row">
             <div class="col-lg-6 col-xl-6">
                 <div class="footer_menu_widget">
-                    <ul>
-                        <li class="list-inline-item" style="color: {{rs.text_color}};><a href="#">Home</a></li>
-                        <li class="list-inline-item" style="color: {{rs.text_color}};><a href="#">Listing</a></li>
-                        <li class="list-inline-item" style="color: {{rs.text_color}};><a href="#">Property</a></li>
-                        <li class="list-inline-item" style="color: {{rs.text_color}};><a href="#">Pages</a></li>
-                        <li class="list-inline-item" style="color: {{rs.text_color}};><a href="#">Blog</a></li>
-                        <li class="list-inline-item" style="color: {{rs.text_color}};><a href="#">Contact</a></li>
+                    <ul>                        
+                        <li><a href="{% url 'company' %}">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
