--- a/home/templates/base/header2.html
+++ b/home/templates/base/header2.html
@@ -199,30 +199,33 @@
 <div id="page" class="stylehome1 h0">
     <div class="mobile-menu">
         <div class="header stylehome1">
-            <div class="main_logo_home2 text-center">
-      <a href="/"><img class="nav_logo_img img-fluid mt20" style="height: 60px;" src="{{rs.logo.url}}" alt="makaanhub.png"></a>
-            </div>
-            <ul class="menu_bar_home2">
-                <li class="list-inline-item list_s"><a href="page-register.html"></a></li>
-                <li class="list-inline-item">
-                    <div class="search_overlay">
-                          <div id="search-button-listener2" class="mk-search-trigger style2 mk-fullscreen-trigger">
-                               <div id="search-button2"><i class="flaticon-magnifying-glass"></i></div>
-                          </div>
-                        <div class="mk-fullscreen-search-overlay" id="mk-search-overlay2">
-                            <button class="mk-fullscreen-close" id="mk-fullscreen-close-button2"><i class="fa fa-times"></i></button>
-                            <div id="mk-fullscreen-search-wrapper2">
-                                  <form method="get" id="mk-fullscreen-searchform2">
-                                    <input type="text" value="" placeholder="Search courses..." id="mk-fullscreen-search-input2">
-                                    <i class="flaticon-magnifying-glass fullscreen-search-icon"><input value="" type="submit"></i>
-                                  </form>
+            <div class="home1-advnc-search home7">
+                <ul class="h1ads_1st_list mb0 text-center">
+                    <li class="list-inline-item">
+                        <div class="search_option_two">
+                            <div class="candidate_revew_select">
+                                <select class="selectpicker w100 show-tick">
+                                    <option>Select City</option>
+                                    {% for rs in city %}
+                                    <option>{{rs.title}}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li class="list-inline-item"><a class="mobile-menu-trigger" href="#menu"><img src="{% static '' %}main/images/dark-nav-icon.jpg" alt=""></a></a></li>
-            </ul>
-        </div>
+                    </li>
+                    <li class="list-inline-item">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="exampleInputName1" placeholder="Enter keyword...">
+                        </div>
+                    </li>
+                    <li class="list-inline-item">
+                        <div class="search_option_button">
+                            <button type="submit" class="btn btn-thm">Search</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+         </div>
     </div><!-- /.mobile-menu -->
     
     <nav id="menu" class="stylehome1">
